[package]
name = "clint"
version = "0.1.0"
authors = ["Cliff Han <cliff.hp@gmail.com>"]
edition = "2018"
description = "A library for building interactive CLI easily"

[features]
default = [] # User must choose at least one feature
sync = []

[dependencies]
crossterm = { version = "0.19" }

[[example]]
name = "cli_sync"
required-features = ["sync"]
