[package]
name = "clint"
version = "0.1.0"
authors = ["Cliff Han <cliff.hp@gmail.com>"]
edition = "2018"
description = "A library for building interactive CLI easily"

[features]
default = [] # User must choose at least one feature
sync = ["flume"]
async = []
async-tokio = ["async", "tokio", "crossterm/event-stream", "futures-core", "futures", "futures-timer"]

[dependencies]
crossterm = { version = "0.19" }
log = { version = "0.4", features = ["std"] }
flume = { version = "0.10", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
futures-core = { version = "0.3", optional = true, default-features = false }
futures = { version = "0.3", optional = true }
futures-timer = { version = "3.0", optional = true }

[[example]]
name = "cli_sync"
required-features = ["sync"]

[[example]]
name = "cli_async_tokio"
required-features = ["async-tokio"]
